fix: unified wrap structure

--- a/titangene/styles-03.css
+++ b/titangene/styles-03.css
@@ -36,6 +36,10 @@ a {
 .row {
   font-size: 0;
 }
+.col-wrap {
+  width: 820px;
+  margin: auto;
+}
 .col-half {
   width: 50%;
   padding: 0 20px;
@@ -89,10 +93,6 @@ nav ul a:hover {
 }
 
 
-.col-wrap {
-  width: 820px;
-  margin: auto;
-}
 .banner-wrap {
   padding: 60px 0;
   background-color: #fdfdfd;
@@ -124,9 +124,10 @@ nav ul a:hover {
 }
 
 .about-wrap {
-  width: 820px;
   padding: 80px 0 180px 0;
   margin: auto;
+}
+.about-wrap .col-wrap {
   column-count: 2;
   column-gap: 40px;
 }
